# xalloc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bash
include/: jjxalloc.h  xalloc.h
src/: jjxalloc_test1.c  jjxalloc_test1.cxx  jjxalloc_test2.c  jjxalloc_test2.cxx  jjxalloc_test3.c  jjxalloc_test3.cxx  xalloc.c  xalloc_test1.c  xalloc_test1.cxx  xalloc_test2.c  xalloc_test2.cxx  xalloc_test3.c  xalloc_test3.cxx
